--- a/TFG_eclipse/WebContent/css/index.css
+++ b/TFG_eclipse/WebContent/css/index.css
@@ -1,24 +1,35 @@
-html {
-    height: 100%;
+html,
+body {
+    margin: 0;
+    font-family: "brandon-grotesque", "Brandon Grotesque", "Century Gothic", sans-serif;
 }
 
-.container-fluid {
+.row {
+    margin: 0 !important;
+}
+
+.div1 {
     padding: 50px;
+    height: 100vh;
 }
 
 .logo {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    width: 100%;
+    height: auto;
+}
+
+.logo img {
     width: 64px;
 }
 
 .f-row {
-    max-width: 550px;
-    margin: auto;
-    padding: 40px;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    
 }
 
 .form {
@@ -57,9 +68,96 @@ html {
 }
 
 .video {
-    position: fixed;
+    position: absolute;
     right: 0;
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
+}
+
+
+/* QUE HACEMOS */
+
+.div2 {
+    width: 100%;
+    padding: 50px;
+    height: 100%;
+}
+
+.ab-row {
+    width: 100%;
+}
+
+.ab-h {
+    margin-bottom: 60px;
+    font-size: 46px;
+    font-weight: 400;
+}
+
+.ab-col {
+    text-align: center;
+    margin: auto;
+}
+
+.ab-col-p {
+    max-width: 800px;
+    margin: auto;
+}
+
+.ab-p {
+    margin: auto !important;
+    text-align: center;
+}
+
+.ab-sp {
+    text-decoration: none;
+    background-color: #9ddee1;
+}
+
+.ab-row-i {
+    width: 100%;
+    padding: 80px 0 0;
+}
+
+.ab-i {
+    font-size: 165px;
+    border: .5px solid black;
+    border-radius: 50px;
+    padding: 20px;
+}
+
+.ns {
+    margin: 0 100px;
+    background-color: black;
+    height: 0.1px;
+}
+
+.ab-i:hover {
+    background-color: #9ddee1;
+}
+
+.prov {
+    width: 100%;
+    height: 100%;
+}
+
+.col-prov {
+    width: 100%;
+    padding: 0;
+    height: 100%;
+}
+
+.material-icons {
+    font-size: 55px !important;
+    color: rgb(63, 63, 63);
+}
+
+
+/* FOOTER */
+
+footer {
+    clear: both;
+    border-style: solid;
+    border-color: #DBDBDB;
+    border-width: 1px 0 0 0;
 }
