--- a/TFG_prueba/css/index.css
+++ b/TFG_prueba/css/index.css
@@ -22,6 +22,14 @@ body {
     width: 64px;
 }
 
+.inicio {
+    text-decoration: none;
+}
+
+.registro {
+    text-decoration: none;
+}
+
 .f-row {
     max-width: 400px;
     margin: auto;
@@ -38,6 +46,11 @@ body {
 
 .f-col a {
     color: wheat;
+}
+
+.f-col a:hover {
+    color: yellow;
+    text-decoration: none;
 }
 
 .form {
@@ -60,18 +73,6 @@ body {
     margin: 5px !important;
 }
 
-.f-a {
-    color: wheat;
-    font-weight: bold;
-    font-size: x-small;
-}
-
-.f-a:hover {
-    color: wheat;
-    text-decoration: none;
-    font-size: 12px;
-}
-
 .btn {
     padding: 10px;
 }
@@ -91,7 +92,12 @@ body {
     margin: 0;
     width: 100%;
     padding: 50px;
-    height: 100%;
+    height: 100vh;
+    /* background-color: burlywood; */
+    background-image: url("../img/div2.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .ab-row {
@@ -156,29 +162,11 @@ body {
     color: rgb(63, 63, 63);
 }
 
-
-/* BILBAO */
-
-.div4 {
-    margin: 0;
-    width: 100%;
-    padding: 0;
-}
-
-.col-bilb {
-    padding: 0;
-}
-
-.col-bilb img {
-    width: 100%;
-    height: 400px;
-    filter: brightness(0.8);
-}
-
 .div3 {
     margin: 0;
     width: 100%;
-    padding: 0;
+    padding: 50px;
+    /* height: 100vh; */
 }
 
 .row-emp {
@@ -243,44 +231,239 @@ body {
 
 .header {
     width: 100%;
-    padding: 10px;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
+    background-color: transparent;
 }
 
 .navbar {
     margin-bottom: 0;
+    padding: 15px;
+    justify-content: normal;
+}
+
+.nav-item {
+    display: inline;
+}
+
+.navbar a {
+    color: white;
 }
 
 
 /* FOOTER */
 
 footer {
+    font-family: "brandon-grotesque", "Brandon Grotesque", "Century Gothic", sans-serif;
     border: 0 !important;
     clear: both;
     border-style: solid;
-    border-color: #DBDBDB;
     border-width: 1px 0 0 0;
-    background-color: rgb(63, 63, 63);
-    padding: 20px;
+    /* background-color: #2e383f; */
+    padding: 30px;
     align-content: center;
-    position: absolute;
+    text-align: center;
+    /* position: absolute;
     bottom: 0;
-    left: 0;
+    left: 0; */
     width: 100%;
+    color: #7a8186;
+    font-size: 18px;
+    line-height: 2;
+    text-transform: uppercase;
+    word-spacing: 1px;
 }
 
 .foot-row {
     text-align: center;
-    max-width: 500px;
+    max-width: 800px;
     margin: auto;
 }
 
 .foot-col i {
     font-size: 24px;
-    color: #008B8B;
+    color: #99a0a5;
+}
+
+.foot-col img {
+    width: 64px;
+    margin: 10px 0;
+}
+
+.info {
+    max-width: 500px;
+}
+
+.social {
+    max-width: 300px;
+    padding: 20px;
+}
+
+.copy p {
+    font-size: 12px !important;
+    margin: 0;
+}
+
+.info p {
+    color: #f1d900;
+    margin: 0;
+}
+
+.foot-col {}
+
+.foot-col p {
+    font-size: 18px;
+    padding: 10px 0;
+}
+
+.foot-col a {
+    color: white;
+    text-decoration: none;
+}
+
+.foot-col a:hover {
+    color: #f1d900;
+    text-decoration: none;
+}
+
+
+/* CHAT */
+
+.div4 {
+    /* height: 100vh; */
+}
+
+.div4 h2 {
+    font-size: 46px;
+    font-weight: 400;
+    margin: 0px;
+    color: white;
+}
+
+h1 {
+    margin: 0;
+    font-size: 2.5em;
+    font-weight: 900;
+    text-align: center;
+}
+
+.col-p {
+    max-width: 500px;
+    margin: auto;
+    text-align: center;
+    font-size: 14px;
+    padding: 30px;
+    color: white;
+}
+
+.col-p p {
+    padding: 20px;
+}
+
+#output {
+    text-align: center;
+}
+
+#container {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+
+input {
+    font-family: "brandon-grotesque", "Brandon Grotesque", "Century Gothic", sans-serif;
+    color: #000;
+    padding: 5px 25px;
+    display: inline-block;
+    font-size: 20px;
+    border: solid 3px black;
+    border-radius: 15px;
+}
+
+hr {
+    max-width: 550px;
+    border: .7px solid black
+}
+
+.row-chat {
+    margin: auto;
+    max-width: 1200px;
+    padding: 10px;
+    height: 329px;
+}
+
+.col-chat {
+    padding: 42px;
+}
+
+.col-chat h1 {
+    font-size: 40px;
+}
+
+.col-p span {
+    text-decoration: none;
+    background-color: #9ddee1;
+}
+
+.bot {
+    width: 300px;
+    float: right;
+}
+
+
+/* CONTACTO IMG */
+
+.contacto {
+    width: 100%;
+    background-image: url("../img/footer.png");
+}
+
+.boton {
+    width: 70px;
+}
+
+.boton:hover {
+    background: #3a7999;
+    color: white;
+    box-shadow: inset 0 0 0 3px #3a7999;
+}
+
+.row-contact {
+    width: 100%;
+    height: 329px;
+    margin: 0;
+    text-align: center;
+}
+
+.col-contact {
+    padding: 55px;
+    color: white;
+}
+
+.col-contact img {
+    width: 100px;
+    color: white;
+}
+
+.col-contact h5 {
+    font-size: 1.225em;
+    font-weight: 900;
+    text-transform: uppercase;
+    margin: 20px;
+}
+
+.col-contact p {
+    font-weight: 300;
+}
+
+
+/* MAP */
+
+#map {
+    width: 100%;
+    height: 400px;
 }
 
 
