--- a/TFG_prueba/css/contact.css
+++ b/TFG_prueba/css/contact.css
@@ -6,7 +6,7 @@ p {
     scroll-behavior: smooth;
 }
 
-.div1 {
+.contacto {
     padding: 30px;
 }
 
@@ -14,37 +14,102 @@ p {
 /* HEADER */
 
 .header {
-    background-color: black;
     width: 100%;
-    padding: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: #2e383f;
 }
 
 .navbar {
     margin-bottom: 0;
+    padding: 15px;
+    justify-content: normal;
+}
+
+.nav-item {
+    display: inline;
+}
+
+.navbar a {
+    color: white;
 }
 
 
 /* FOOTER */
 
 footer {
+    font-family: "brandon-grotesque", "Brandon Grotesque", "Century Gothic", sans-serif;
+    border: 0 !important;
     clear: both;
     border-style: solid;
-    border-color: #DBDBDB;
     border-width: 1px 0 0 0;
-    background-color: rgb(63, 63, 63);
-    padding: 20px;
+    background-color: #2e383f;
+    padding: 30px;
     align-content: center;
+    text-align: center;
+    /* position: absolute;
+    bottom: 0;
+    left: 0; */
+    width: 100%;
+    color: #7a8186;
+    font-size: 18px;
+    line-height: 2;
+    text-transform: uppercase;
+    word-spacing: 1px;
 }
 
 .foot-row {
     text-align: center;
-    max-width: 600px;
+    max-width: 800px;
     margin: auto;
 }
 
 .foot-col i {
     font-size: 24px;
-    color: #008B8B;
+    color: #99a0a5;
+}
+
+.foot-col img {
+    width: 64px;
+    margin: 10px 0;
+}
+
+.info {
+    max-width: 500px;
+}
+
+.social {
+    max-width: 300px;
+    padding: 20px;
+}
+
+.copy p {
+    font-size: 12px !important;
+    margin: 0;
+}
+
+.info p {
+    color: #f1d900;
+    margin: 0;
+}
+
+.foot-col {}
+
+.foot-col p {
+    font-size: 18px;
+    padding: 10px 0;
+}
+
+.foot-col a {
+    color: white;
+    text-decoration: none;
+}
+
+.foot-col a:hover {
+    color: #f1d900;
+    text-decoration: none;
 }
 
 
@@ -97,6 +162,7 @@ hr {
 .row-chat {
     margin: auto;
     max-width: 1200px;
+    padding-top: 70px;
 }
 
 .col-chat {
@@ -105,7 +171,7 @@ hr {
     margin: auto;
 }
 
-span {
+.col-p span {
     text-decoration: none;
     background-color: #9ddee1;
 }
