--- a/TFG_prueba/css/index.css
+++ b/TFG_prueba/css/index.css
@@ -94,7 +94,7 @@ body {
     padding: 50px;
     height: 100vh;
     /* background-color: burlywood; */
-    background-image: url("../img/div2.png");
+    background-image: url("../img/azul.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
